--- a/docs/apis/snippets/fields-documentation/create-fields/1/request-body.adoc
+++ b/docs/apis/snippets/fields-documentation/create-fields/1/request-body.adoc
@@ -12,6 +12,7 @@
   "label" : "Username",
   "order" : 1,
   "pattern" : "",
-  "required" : true
+  "required" : true,
+  "unique" : false
 }
 ----
