--- a/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id/1/response-body.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id/1/response-body.adoc
@@ -9,6 +9,7 @@
       "defaultRoles" : [ "member" ],
       "defaultAuthorities" : [ "view-list" ],
       "defaultGroups" : [ "admins" ],
+      "defaultAccountStatus" : null,
       "fields" : [ "field.username", "field.email", "field.password" ],
       "headerOne" : "My App",
       "headerTwo" : "Register",
