--- a/docs/apis/snippets/domain-flow-configuration-documentation/get-all-domain-flow-configurations/1/response-body.adoc
+++ b/docs/apis/snippets/domain-flow-configuration-documentation/get-all-domain-flow-configurations/1/response-body.adoc
@@ -4,6 +4,7 @@
   "_embedded" : {
     "domainFlowConfigurations" : [ {
       "domainId" : "0",
+      "jwkSetUri" : null,
       "theme" : {
         "logoSvg" : "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"172\" height=\"91\" viewBox=\"-52 -53 100 100\" stroke-width=\"2\"><g fill=\"none\"><ellipse stroke=\"#66899a\" rx=\"6\" ry=\"44\"/><ellipse stroke=\"#e1d85d\" rx=\"6\" ry=\"44\" transform=\"rotate(-66)\"/><ellipse stroke=\"#80a3cf\" rx=\"6\" ry=\"44\" transform=\"rotate(66)\"/><circle stroke=\"#4b541f\" r=\"44\"/></g><g fill=\"#66899a\" stroke=\"white\"><circle fill=\"#80a3cf\" r=\"13\"/><circle cy=\"-44\" r=\"9\"/><circle cx=\"-40\" cy=\"18\" r=\"9\"/><circle cx=\"40\" cy=\"18\" r=\"9\"/></g></svg>",
         "themeColour" : {
@@ -20,16 +21,31 @@
           "successText" : "black"
         }
       },
+      "passwordReset" : {
+        "userFields" : [ "username" ],
+        "initiationFormTitle" : null,
+        "initiationFormDescription" : null,
+        "confirmationFormTitle" : null,
+        "confirmationFormDescription" : null,
+        "userFieldPlaceholder" : null,
+        "submitButtonLabel" : null,
+        "initiationSuccessMessage" : null,
+        "confirmationSuccessMessage" : null,
+        "otpProfile" : "password-reset",
+        "passwordConfirmationBaseUrl" : null
+      },
+      "propertyValidation" : { },
       "_links" : {
         "self" : {
-          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f2cfd62830e9b2c14dadc1a"
+          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f40d6cf6e61f36e034ba6c8"
         },
         "domainFlowConfiguration" : {
-          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f2cfd62830e9b2c14dadc1a"
+          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f40d6cf6e61f36e034ba6c8"
         }
       }
     }, {
       "domainId" : "1234",
+      "jwkSetUri" : null,
       "theme" : {
         "logoSvg" : null,
         "themeColour" : {
@@ -46,6 +62,20 @@
           "successText" : "#838584"
         }
       },
+      "passwordReset" : {
+        "userFields" : [ "username" ],
+        "initiationFormTitle" : null,
+        "initiationFormDescription" : null,
+        "confirmationFormTitle" : null,
+        "confirmationFormDescription" : null,
+        "userFieldPlaceholder" : null,
+        "submitButtonLabel" : null,
+        "initiationSuccessMessage" : null,
+        "confirmationSuccessMessage" : null,
+        "otpProfile" : "password-reset",
+        "passwordConfirmationBaseUrl" : null
+      },
+      "propertyValidation" : { },
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/repo/domainFlowConfigurations/1"
