--- a/docs/apis/snippets/domain-flow-configuration-documentation/get-domain-flow-configuration-by-id/1/response-body.adoc
+++ b/docs/apis/snippets/domain-flow-configuration-documentation/get-domain-flow-configuration-by-id/1/response-body.adoc
@@ -2,6 +2,7 @@
 ----
 {
   "domainId" : "1234",
+  "jwkSetUri" : null,
   "theme" : {
     "logoSvg" : null,
     "themeColour" : {
@@ -18,6 +19,20 @@
       "successText" : "#838584"
     }
   },
+  "passwordReset" : {
+    "userFields" : [ "username" ],
+    "initiationFormTitle" : null,
+    "initiationFormDescription" : null,
+    "confirmationFormTitle" : null,
+    "confirmationFormDescription" : null,
+    "userFieldPlaceholder" : null,
+    "submitButtonLabel" : null,
+    "initiationSuccessMessage" : null,
+    "confirmationSuccessMessage" : null,
+    "otpProfile" : "password-reset",
+    "passwordConfirmationBaseUrl" : null
+  },
+  "propertyValidation" : { },
   "_links" : {
     "self" : {
       "href" : "http://localhost:8080/repo/domainFlowConfigurations/1"
