--- a/docs/apis/snippets/field-types-documentation/get-all-field-types/1/http-response.adoc
+++ b/docs/apis/snippets/field-types-documentation/get-all-field-types/1/http-response.adoc
@@ -11,7 +11,7 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 1126
+Content-Length: 1151
 
 {
   "_embedded" : {
@@ -27,6 +27,7 @@ Content-Length: 1126
       "css" : "",
       "max" : "100",
       "min" : "10",
+      "options" : null,
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/repo/fieldTypes/1"
