--- a/docs/apis/snippets/field-types-documentation/get-all-field-types/1/response-body.adoc
+++ b/docs/apis/snippets/field-types-documentation/get-all-field-types/1/response-body.adoc
@@ -14,6 +14,7 @@
       "css" : "",
       "max" : "100",
       "min" : "10",
+      "options" : null,
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/repo/fieldTypes/1"
