--- a/docs/apis/snippets/field-types-documentation/get-field-type-by-id/1/response-body.adoc
+++ b/docs/apis/snippets/field-types-documentation/get-field-type-by-id/1/response-body.adoc
@@ -12,6 +12,7 @@
   "css" : "",
   "max" : "100",
   "min" : "10",
+  "options" : null,
   "_links" : {
     "self" : {
       "href" : "http://localhost:8080/repo/fieldTypes/1"
