--- a/docs/apis/snippets/field-types-documentation/get-field-type-by-id/1/response-fields.adoc
+++ b/docs/apis/snippets/field-types-documentation/get-field-type-by-id/1/response-fields.adoc
@@ -45,6 +45,10 @@
 |`+String+`
 |The field type name
 
+|`+options+`
+|`+Null+`
+|Field options for select fields
+
 |`+enclosingElement+`
 |`+String+`
 |The element enclosing the field
