--- a/docs/apis/snippets/fields-documentation/get-fields-by-domain/1/http-response.adoc
+++ b/docs/apis/snippets/fields-documentation/get-fields-by-domain/1/http-response.adoc
@@ -11,7 +11,7 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 686
+Content-Length: 711
 
 {
   "_embedded" : {
@@ -27,6 +27,7 @@ Content-Length: 686
       "order" : 1,
       "pattern" : "",
       "required" : true,
+      "unique" : false,
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/repo/fields/1"
