--- a/docs/apis/snippets/fields-documentation/get-fields-by-domain/1/response-body.adoc
+++ b/docs/apis/snippets/fields-documentation/get-fields-by-domain/1/response-body.adoc
@@ -14,6 +14,7 @@
       "order" : 1,
       "pattern" : "",
       "required" : true,
+      "unique" : false,
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/repo/fields/1"
