--- a/docs/apis/snippets/registration-profile-documentation/create-registration-profile/1/request-body.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/create-registration-profile/1/request-body.adoc
@@ -8,6 +8,7 @@
   "defaultRoles" : [ "member" ],
   "defaultAuthorities" : [ "view-list" ],
   "defaultGroups" : [ "admins" ],
+  "defaultAccountStatus" : null,
   "fields" : [ "field.username", "field.email", "field.password" ],
   "headerOne" : "My App",
   "headerTwo" : "Register",
