--- a/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id-and-code/1/response-fields.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id-and-code/1/response-fields.adoc
@@ -49,6 +49,10 @@
 |`+String+`
 |Instruction message for registering users displayed at the top of the form
 
+|`+defaultAccountStatus+`
+|`+Null+`
+|Default account status configuration
+
 |`+submitButtonTitle+`
 |`+String+`
 |Submit button text
