--- a/docs/apis/snippets/domain-flow-configuration-documentation/get-domain-flow-configuration-by-id/1/response-body.adoc
+++ b/docs/apis/snippets/domain-flow-configuration-documentation/get-domain-flow-configuration-by-id/1/response-body.adoc
@@ -16,7 +16,8 @@
       "danger" : "#d5d5d5",
       "dangerText" : "#161616",
       "success" : "##feffff",
-      "successText" : "#838584"
+      "successText" : "#838584",
+      "text" : "#000000"
     }
   },
   "passwordReset" : {
@@ -27,10 +28,14 @@
     "confirmationFormDescription" : null,
     "userFieldPlaceholder" : null,
     "submitButtonLabel" : null,
+    "resourcesBaseUrl" : null,
+    "initiationFormUrl" : null,
+    "confirmationFormUrl" : null,
     "initiationSuccessMessage" : null,
     "confirmationSuccessMessage" : null,
     "otpProfile" : "password-reset",
-    "passwordConfirmationBaseUrl" : null
+    "linkPasswordConfirmationBaseUrl" : null,
+    "linkPasswordConfirmationUrl" : null
   },
   "propertyValidation" : { },
   "_links" : {
