--- a/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id/1/http-response.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id/1/http-response.adoc
@@ -11,7 +11,7 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 1005
+Content-Length: 1187
 
 {
   "_embedded" : {
@@ -19,10 +19,17 @@ Content-Length: 1005
       "code" : "user",
       "domainId" : "0",
       "defaultRedirectUrl" : "http://my.app.com/home",
+      "resourcesBaseUrl" : null,
+      "formUrl" : null,
       "defaultRoles" : [ "member" ],
       "defaultAuthorities" : [ "view-list" ],
       "defaultGroups" : [ "admins" ],
-      "defaultAccountStatus" : null,
+      "defaultAccountStatus" : {
+        "credentialExpired" : false,
+        "active" : true,
+        "enabled" : true,
+        "locked" : false
+      },
       "fields" : [ "field.username", "field.email", "field.password" ],
       "headerOne" : "My App",
       "headerTwo" : "Register",
