--- a/docs/apis/snippets/domain-flow-configuration-documentation/get-all-domain-flow-configurations/1/http-response.adoc
+++ b/docs/apis/snippets/domain-flow-configuration-documentation/get-all-domain-flow-configurations/1/http-response.adoc
@@ -11,52 +11,11 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 3859
+Content-Length: 2085
 
 {
   "_embedded" : {
     "domainFlowConfigurations" : [ {
-      "domainId" : "0",
-      "jwkSetUri" : null,
-      "theme" : {
-        "logoSvg" : "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"172\" height=\"91\" viewBox=\"-52 -53 100 100\" stroke-width=\"2\"><g fill=\"none\"><ellipse stroke=\"#66899a\" rx=\"6\" ry=\"44\"/><ellipse stroke=\"#e1d85d\" rx=\"6\" ry=\"44\" transform=\"rotate(-66)\"/><ellipse stroke=\"#80a3cf\" rx=\"6\" ry=\"44\" transform=\"rotate(66)\"/><circle stroke=\"#4b541f\" r=\"44\"/></g><g fill=\"#66899a\" stroke=\"white\"><circle fill=\"#80a3cf\" r=\"13\"/><circle cy=\"-44\" r=\"9\"/><circle cx=\"-40\" cy=\"18\" r=\"9\"/><circle cx=\"40\" cy=\"18\" r=\"9\"/></g></svg>",
-        "themeColour" : {
-          "primary" : "lightcoral",
-          "secondary" : "darkslateblue",
-          "info" : "aliceblue",
-          "primaryDark" : "#d07070",
-          "primaryDarkest" : "#c06060",
-          "secondaryDark" : "#39306f",
-          "secondaryDarkest" : "#2b2453",
-          "danger" : "darkred",
-          "dangerText" : "white",
-          "success" : "#2b8378",
-          "successText" : "black"
-        }
-      },
-      "passwordReset" : {
-        "userFields" : [ "username" ],
-        "initiationFormTitle" : null,
-        "initiationFormDescription" : null,
-        "confirmationFormTitle" : null,
-        "confirmationFormDescription" : null,
-        "userFieldPlaceholder" : null,
-        "submitButtonLabel" : null,
-        "initiationSuccessMessage" : null,
-        "confirmationSuccessMessage" : null,
-        "otpProfile" : "password-reset",
-        "passwordConfirmationBaseUrl" : null
-      },
-      "propertyValidation" : { },
-      "_links" : {
-        "self" : {
-          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f40d6cf6e61f36e034ba6c8"
-        },
-        "domainFlowConfiguration" : {
-          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f40d6cf6e61f36e034ba6c8"
-        }
-      }
-    }, {
       "domainId" : "1234",
       "jwkSetUri" : null,
       "theme" : {
@@ -72,7 +31,8 @@ Content-Length: 3859
           "danger" : "#d5d5d5",
           "dangerText" : "#161616",
           "success" : "##feffff",
-          "successText" : "#838584"
+          "successText" : "#838584",
+          "text" : "#000000"
         }
       },
       "passwordReset" : {
@@ -83,10 +43,14 @@ Content-Length: 3859
         "confirmationFormDescription" : null,
         "userFieldPlaceholder" : null,
         "submitButtonLabel" : null,
+        "resourcesBaseUrl" : null,
+        "initiationFormUrl" : null,
+        "confirmationFormUrl" : null,
         "initiationSuccessMessage" : null,
         "confirmationSuccessMessage" : null,
         "otpProfile" : "password-reset",
-        "passwordConfirmationBaseUrl" : null
+        "linkPasswordConfirmationBaseUrl" : null,
+        "linkPasswordConfirmationUrl" : null
       },
       "propertyValidation" : { },
       "_links" : {
@@ -112,7 +76,7 @@ Content-Length: 3859
   },
   "page" : {
     "size" : 20,
-    "totalElements" : 2,
+    "totalElements" : 1,
     "totalPages" : 1,
     "number" : 0
   }
