--- a/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id-and-code/1/http-response.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id-and-code/1/http-response.adoc
@@ -11,16 +11,23 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 721
+Content-Length: 875
 
 {
   "code" : "user",
   "domainId" : "0",
   "defaultRedirectUrl" : "http://my.app.com/home",
+  "resourcesBaseUrl" : null,
+  "formUrl" : null,
   "defaultRoles" : [ "member" ],
   "defaultAuthorities" : [ "view-list" ],
   "defaultGroups" : [ "admins" ],
-  "defaultAccountStatus" : null,
+  "defaultAccountStatus" : {
+    "credentialExpired" : false,
+    "active" : true,
+    "enabled" : true,
+    "locked" : false
+  },
   "fields" : [ "field.username", "field.email", "field.password" ],
   "headerOne" : "My App",
   "headerTwo" : "Register",
