--- a/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id-and-code/1/response-fields.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/get-registration-profile-for-domain-id-and-code/1/response-fields.adoc
@@ -33,6 +33,14 @@
 |`+String+`
 |Url to redirect to after registration success
 
+|`+resourcesBaseUrl+`
+|`+Null+`
+|Base Url to resolve html js and css dependencies (in case of serving page through proxy)
+
+|`+formUrl+`
+|`+Null+`
+|Url to send the POST request upon registration form submit (for proxy and custom handling)
+
 |`+headerOne+`
 |`+String+`
 |Main registration page title - h1
@@ -50,7 +58,7 @@
 |Instruction message for registering users displayed at the top of the form
 
 |`+defaultAccountStatus+`
-|`+Null+`
+|`+Object+`
 |Default account status configuration
 
 |`+submitButtonTitle+`
