updated identity documentation

--- a/docs/apis/snippets/domain-identity-configuration-documentation/create-new-domain-identity-configuration/1/request-body.adoc
+++ b/docs/apis/snippets/domain-identity-configuration-documentation/create-new-domain-identity-configuration/1/request-body.adoc
@@ -2,15 +2,46 @@
 ----
 {
   "domainId" : "1",
+  "displayName" : "Test Domain",
   "authorizationCodeType" : "alphanumeric",
   "authorizationCodeTTLSeconds" : 600,
   "maxAuthorizationTTLSeconds" : 86400,
   "refreshTokenEnabled" : true,
   "accessTokenProvider" : "jwt",
   "refreshTokenProvider" : "alphanumeric",
+  "passwordResetUrl" : "http://mydomain.com/passwordReset",
   "issuerId" : "mmadu.com",
   "authorizationCodeTypeProperties" : { },
   "accessTokenProperties" : { },
-  "refreshTokenProperties" : { }
+  "refreshTokenProperties" : { },
+  "theme" : {
+    "logoSvg" : null,
+    "themeColour" : {
+      "primary" : "#007D76",
+      "secondary" : "#E6354C",
+      "info" : "#53FCE6",
+      "primaryDark" : "#005752",
+      "primaryDarkest" : "rgba(38, 145, 139, 0.5)",
+      "secondaryDark" : "#ce1a31",
+      "secondaryDarkest" : "rgba(234, 83, 103, 0.5)",
+      "danger" : "#d5d5d5",
+      "dangerText" : "#161616",
+      "success" : "##feffff",
+      "successText" : "#838584",
+      "text" : "black"
+    }
+  },
+  "defaultLoginProfile" : {
+    "title" : "Test Domain - Login",
+    "message" : "Sign In",
+    "showResetPassword" : false
+  },
+  "loginProfiles" : {
+    "user" : {
+      "title" : "Login",
+      "message" : "Sign In as User",
+      "showResetPassword" : true
+    }
+  }
 }
 ----
